[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Heart.png" type="Texture" id=1]
[ext_resource path="res://assets/blahaj_model_fluffel_lv3_final.png" type="Texture" id=2]
[ext_resource path="res://assets/sea_of_love_splash.png" type="Texture" id=3]
[ext_resource path="res://Count.gd" type="Script" id=4]
[ext_resource path="res://assets/ok_button.png" type="Texture" id=5]
[ext_resource path="res://assets/friendship_meter_progress.png" type="Texture" id=6]
[ext_resource path="res://assets/friendship_meter.png" type="Texture" id=7]
[ext_resource path="res://assets/friendship_meter_under.png" type="Texture" id=8]
[ext_resource path="res://HealthBar.gd" type="Script" id=9]
[ext_resource path="res://Points.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "heart flashing"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 18.3791, 0.00798533 ),
"update": 1,
"values": [ 3, 4 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="canvas"]
position = Vector2( 6, -44 )
pitch_scale = 1.84

[node name="Control" type="Control" parent="canvas"]
margin_left = 9.0
margin_top = -10.0
margin_right = 49.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="canvas/Control"]
margin_left = 353.0
margin_top = 208.0
margin_right = 425.0
margin_bottom = 222.0
rect_scale = Vector2( 8.1338, 5.76 )
text = "GOS points"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="Control" parent="canvas/Control"]
margin_left = -9.0
margin_top = 10.0
margin_right = 31.0
margin_bottom = 50.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendshipMeter" type="TextureProgress" parent="canvas/Control/HealthBar"]
margin_left = 591.0
margin_top = 108.0
margin_right = 1366.0
margin_bottom = 358.0
value = 50.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.964706, 0.529412, 1, 1 )

[node name="Buddy" type="TextureButton" parent="canvas"]
margin_left = 544.0
margin_top = 333.0
margin_right = 2080.0
margin_bottom = 1127.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Heart" type="Sprite" parent="canvas"]
position = Vector2( 273, 248 )
texture = ExtResource( 1 )
hframes = 6
vframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="canvas/Heart"]
anims/RESET = SubResource( 1 )
"anims/heart flashing" = SubResource( 2 )

[node name="PopupSplash" type="TextureRect" parent="canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 204.0
margin_top = 128.0
margin_right = 204.0
margin_bottom = 128.0
rect_scale = Vector2( 1.668, 0.948 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closebutton" type="TextureButton" parent="canvas/PopupSplash"]
margin_left = 739.208
margin_top = 86.4979
margin_right = 1763.21
margin_bottom = 1110.5
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="canvas/Buddy" to="." method="_on_Buddy_pressed"]
[connection signal="pressed" from="canvas/PopupSplash/closebutton" to="." method="_on_closebutton_pressed"]
